encouraged to add entries for their work.

All changes can be found via git - eg, for all changes afer a build:
    git log -rb3xx:
or
    https://github.com/mhammond/pywin32/compare/b3xx...main

As of build 305, installation .exe files have been deprecated; see
https://mhammond.github.io/pywin32_installers.html.

Coming in build 306, as yet unreleased
--------------------------------------
* Add CascadeWindows (#1999, @CristiFati)

* Fix for service registration code updated in build 305 (#1985)

* Support for Python 3.6 was dropped, support for later versions was improved.

Build 305, released 2022-11-06
------------------------------
* Installation .exe files were deprecated.

* @kxrob put a lot of work towards removing use of the deprecated Unicode
  API so we can build on Python 3.12. This should be largely invisible, but
  please report any unintended consequences.

* odbc: Handle `varchar(max)`/`nvarchar(max)` column sizes (#1954)

* win32api.GetTickCount() now returns an unsigned 64bit integer (@kxrob, #1946)

* win32pipe.GetNamedPipeHandleState() now takes a 3rd optional param
  indicating whether the username should be returned, and related constants
  added. (@kxrob, #1946)

* Add win32gui.GetTopWindow() and win32gui.GetAncestor() (#1928, @CristiFati)

* Tweaks to how pywintypes searches for DLLs to better support virtualenvs
  created with --system-site-packages. (@saaketp, #1933)

* Added win32event.CreateWaitableTimerExW (#1945, @zariiii9003)

* Changes in PARAM handling. Some functions which returned a WPARAM or LPARAM
  allowed you to return a pointer to a Python buffer object or a PyUnicode.
  These functions now only accept a Python long to be returned. Note that
  this DOES NOT apply to functions with accept WPARAM or LPARAM as arguments,
  only when they are being returned. Impacted functions are `OnNotify`
  handler, LV_ITEM/TV_ITEM objects, PyIContextMenu3::HandleMenuMsg2, and the
  result of a WNDPROC/DLGPROC (#1927).
